<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8DDDE8">

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="400dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center|center_horizontal|center_vertical"
            android:onClick="Tap"
            android:tag="0"
            android:text="@string/single"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center|center_horizontal|center_vertical"
            android:onClick="Tap"
            android:tag="1"
            android:text="@string/multi"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center|center_horizontal|center_vertical"
            android:onClick="Tap"
            android:tag="2"
            android:text="@string/rules"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center|center_horizontal|center_vertical"
            android:onClick="Tap"
            android:tag="3"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center|center_horizontal|center_vertical"
            android:onClick="Tap"
            android:tag="4"
            android:text="@string/quit"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>